# granite_speech_io_processor_plugin

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: run_speech_client.py  run_speech_offline.py  run_speech_online.py  run_speech_plugin.py
granite_speech_plugin/: __init__.py  async_utils.py  granite_speech_processor_plugin.py  utils.py
